fix code wrap lines

--- a/src/app/ui/kit/Code/Code.scss
+++ b/src/app/ui/kit/Code/Code.scss
@@ -1,50 +1,48 @@
 @import "~assets/scss/bundle.scss";
 
 .code {
-  position: relative;
-  // font-family: 'Mulish';
+	position: relative;
+	display: grid;
 
-  code {
-    display: block;
-    padding: 1em;
-    background: inherit;
+	code {
+		display: block;
+		padding: 1em;
+		background: inherit;
 
-    font-size: 1rem;
-    font-family: "JetBrains Mono", "Roboto Mono", "Source Code Pro", "Fira Code Retina", "Fira Code", monospace;
+		font-size: 1rem;
+		font-family: "JetBrains Mono", "Roboto Mono", "Source Code Pro", "Fira Code Retina", "Fira Code", monospace;
 
-    line-height: 1.35;
-    tab-size: 4;
-  }
+		line-height: 1.35;
+		tab-size: 4;
+	}
 
-  @include Scrollbar(0.5em, rgba(white, 0.35), transparent);
-
-  &:not(:hover) {
-    .code__toolbar {
-      opacity: 0;
-    }
-  }
+	&:not(:hover) {
+		.code__toolbar {
+			opacity: 0;
+		}
+	}
 }
 
 .code__toolbar {
-  position: absolute;
-  top: 0.5em;
-  right: 0.5em;
+	position: absolute;
+	top: 0.5em;
+	right: 0.5em;
 
-  display: flex;
-  align-items: center;
+	display: flex;
+	align-items: center;
 
-  @include column-gap(0.5em);
+	@include column-gap(0.5em);
 
-  transition: 200ms ease opacity;
+	transition: 200ms ease opacity;
 }
 
 code.code-inline {
-  padding: 0.1em 0.25em;
-  background: $color-gray;
-  border-radius: 0.25em;
+	padding: 0.1em 0.25em;
+	background: $color-gray;
+	border-radius: 0.25em;
 
-  &--dark {
-    background: $color-dark-75;
-    color: white;
-  }
+	&--dark {
+		background: $color-dark-75;
+		color: white;
+	}
 }
